--- a/step3.2/Makefile
+++ b/step3.2/Makefile
@@ -6,16 +6,16 @@
 N=4096
 #N=16384
 DT=0.01f
-STEPS=50
+STEPS=500
 THREADS_PER_BLOCK=1024
 #THREADS_PER_BLOCK=256
 RED_THREADS=4096
 RED_THREADS_PER_BLOCK=128
-WRITE_INTESITY=500
+WRITE_INTESITY=20
 
 INPUT=../sampledata/sampleInput.h5
 #INPUT=../32K.h5
-OUTPUT=step0Output.h5
+OUTPUT=testOutput.h5
 
 INCLUDE=../commons
 LIBS_DIR=/usr/lib/x86_64-linux-gnu/hdf5/serial/
